# setup_wsl

./: .alias  .dircolors  .screenrc  .vimrc  .zpreztorc  .zprofile  .zshrc  build_and_install_vim.sh  create_presto_config.sh  dotfilesLink.sh  dotilesLink.sh  pyproject.toml  requirements.txt  setup.sh
.config/ptpython/: config.py
.vim/: dein.toml
setup_gpu_env/: install_nvidia-docker2.sh
